--- a/vignettes/Create-a-new-pipeline-tutorial.Rmd
+++ b/vignettes/Create-a-new-pipeline-tutorial.Rmd
@@ -1,17 +1,25 @@
 ---
-title: "Create-a-new-pipeline-tutorial"
+title: "Add a new pipeline"
+subtitle: "A developer's guidelines"
 author: "Samuel Wieczorek"
-date: "01/07/2020"
-output: html_document
+date: "`r format(Sys.time(), '%B %d, %Y')`"
+output: 
+  BiocStyle::html_document:
+    toc: true
+    theme: united
+    keep_md: true
+    papersize: a4
 vignette: >
-  %\VignetteIndexEntry{Create-a-new-pipeline-module}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE,
+                      collapse = TRUE,
+                      comment = "#>")
 ```
+
 
 ```{r style, echo = FALSE, results = 'asis'}
 BiocStyle::markdown()
@@ -58,6 +66,23 @@ This complete name is also the name of the file containing the code for the proc
 A pipeline is choosen by the user when he loads a dataset (the UI proposes a liste a possible pipelines for the type of data).The type of pipeline used by the user is set in a variable in the metadata of the dataset. Thus, back to Prostar, it is easy to know which pipeline has to be activated.
 
 Once a dataset has been loaded in Prostar, subitems are created in the menu 'Data processing'
+
+
+
+
+
+
+By default, when no dataset has been loaded yet, all the steps are disabled
+# Writing new process
+
+A process such as usable with Magellan is a R6 classes which contains:
+* the configuration of the process,
+* the list of screens with their severs (shiny)
+
+This class inherits from classes in Magellan: this is how the core engine is integrated in xxx.
+
+
+# Writing a new pipeline
 
 
 
