--- a/vignettes/CreatePipeline.Rmd
+++ b/vignettes/CreatePipeline.Rmd
@@ -10,6 +10,7 @@ output:
     keep_md: true
     papersize: a4
 vignette: >
+  %\VignetteIndexEntry{Create a new pipeline}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
