--- a/vignettes/Magellan.Rmd
+++ b/vignettes/Magellan.Rmd
@@ -10,6 +10,7 @@ output:
     keep_md: true
     papersize: a4
 vignette: >
+  %\VignetteIndexEntry{Magellan}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -31,6 +32,33 @@ Thus, this article is not for end-users but for developers who are interesting i
 
 # Introduction
 
+Magellan is a series of R6 class which build several levels of navigation timeline.
+
+# Installation
+
+Magellan is deploied as a Docker file.
+
+```R
+docker build -t magellan-image . 
+
+```
+
+
+Building the image
+We open the terminal, navigate to the folder containing our new Dockerfile, and start the building process:
+
+```R
+docker build -t magellan.image . 
+```
+
+Starting a container
+After the building process has finished, we can now test our newly built image by starting a container:
+
+```R
+docker run -d --rm -p 3838:3838 my-shinyapp-magellan.image
+```
+
+
 
 # Global architecture
 
@@ -43,7 +71,7 @@ A process (or pipeline) consists in screens and it is a R6 class which inherits 
 
 This vignette aims to describe how to use the workflow ui to process a dataset. The goal is not to describe the different data processing tools available in prostar but to explain the behaviour of the user interface of what we call 'Prostar core'.
 
-As explained in xxx, Prostar implements two different levels of data processing tools:
+As explained in xxx, Mage implements two different levels of data processing tools:
 
 * the upper level correspond to a 'pipeline' and it deals with the type of data and the level of analysis (peptide, protein, peptidomic, etc..). The description of that can be found here (xxx).
 * the xxx level correspond to the data processing tools (Filtering, Normalization, etc..)
@@ -144,5 +172,8 @@ Each skipped step is disabled and if it is a node step (a data processing tool i
 # Navigating through a level
 
 WHen the user navigates in the timelines, the steps previously validated are kept in the state they have when they have been validated
+
+
+
 
 
