--- a/vignettes/Magellan.Rmd
+++ b/vignettes/Magellan.Rmd
@@ -27,6 +27,11 @@ BiocStyle::markdown()
 ```
 
 
+
+This tutorial concerns the use of `Magellan` at a end-user level. It briefly explains the structure/strategy of data managment within the different workflows and how the user interface works. It is not a technical document. However, if developers want to write their own process modules or just better understand deeply how `Magellan` works, we advice beginning with this article.
+
+
+
 # Overview
 
 `Magellan` is a workflow manager which can handle processes with different steps. It works on objects of type `list`.
@@ -151,13 +156,13 @@ Two timelines (horizontal and vertical) are implemented in Magellan. For now, in
 
 
 
-# Basic workflow (process)
+# Simple workflow \label{simpleWorkflow}
 
 Each step is built on the same basic UI. It contains graphical elements related to the process such as widgets (for parameters), different plots and graphics.
 It also contains a button called `Perform` which is used to validate the step.
 
 
-## Launching the module
+## Launch the module \label{simpleWFLaunch}
 
 Once the process server has been loaded, the UI is opening on the first step of the process. This step is always a Description step which explains the content of the process
 
@@ -170,12 +175,27 @@ At the beginning, the inner object is NULL and all the UIs are disabled. It is p
 In fact, when an object is sent to the server, it is stored in a temporary place. At this time, the server is ready to run. 
 When the user clicks on the load button on the Description step, then the object is loaded in the process.
 
-## Navigate through steps
+* on a la barre de navigation en haut avec à gauche les boutons 'Previous' (<<) et 'Reset' et à droite le bouton 'Next' (>>) à droite
+* La barrede navigation affiche les étapes du processus. Elles sont toutes désactivées sauf la première (Description). Le dataset est en "attente" au niveau de la première étape
+µ on peut naviguer sur les autres étapes
+* Pour les étapes désactivées, les widgets correspondants le sont aussi
+* Un reset à ce moment fonctionne déjà et remet le curseur au niveau de la première étape
+
+
+* cette action est réalisée par un clic sur le bouton "Start" de l'étape de Description,
+* A chaque fois qu'une étape a été validée:
+    * le cercle correspondant dans la timeline se colore en vert et est désactivé.
+    * toutes les étapes ultérieures sont activées jusq'à la première obligatoire inclus. Les suivantes restent désactivées car elles nécessitent la validation de l'étape obligatoire
+    
+    
+    
+
+## Navigate through steps \label{simpleWFNavigate}
 
 Thanks to the buttons 'Next' and 'Prev', the user can view the different steps without execute them.
 
 
-## Validating a step
+## Validate a step \label{simpleWFNavigate}
 
 The workflow manager is a sorted list in which the execution of different steps obey to a certain order. This order is defined in the configuration of the process and cannot be modified by the user.
 
@@ -208,7 +228,7 @@ knitr::include_graphics("./figs/example1.png", error = FALSE)
 
 
 
-## Resetting a step
+## Reset a step \label{simpleWFReset}
 
 At this lower level of navigation (process), The button `Reset` is used to reset the current process. Obviously, reseting steps after the last validated one has no effect on the workflow.
 
@@ -223,7 +243,7 @@ Example
 Suppose there are four steps (named from 1 to 5). Steps 1, 2 are validated, step 3 is skipped and the current step is 4.
 
 
-## Saving a process
+## Save the workflow \label{simpleWFSave}
 
 When the last step ('Save') is enabled (which is the case even if there are skipped steps), it is possible to finish the process.
 
@@ -231,24 +251,8 @@ This step is simple as it contains only a 'Save' button. By clicking on it, the 
 
 
 The effect of this action is to enable the steps that can be enabled
-## Module process
 
-### Ouverture d'un module, 
 
-* on a la barre de navigation en haut avec à gauche les boutons 'Previous' (<<) et 'Reset' et à droite le bouton 'Next' (>>) à droite
-* La barrede navigation affiche les étapes du processus. Elles sont toutes désactivées sauf la première (Description). Le dataset est en "attente" au niveau de la première étape
-µ on peut naviguer sur les autres étapes
-* Pour les étapes désactivées, les widgets correspondants le sont aussi
-* Un reset à ce moment fonctionne déjà et remet le curseur au niveau de la première étape
-
-### Load d'un dataset
-
-* cette action est réalisée par un clic sur le bouton "Start" de l'étape de Description,
-* A chaque fois qu'une étape a été validée:
-    * le cercle correspondant dans la timeline se colore en vert et est désactivé.
-    * toutes les étapes ultérieures sont activées jusq'à la première obligatoire inclus. Les       suivantes restent désactivées car elles nécessitent la validation de l'étape                 obligatoire
-    
-### Navigation et validation
 
 * si on valide une étape i alors que des étapes i-x n'ont pas été validées, ces dernières sont considérées comme omises. Le repère sur la timeline devient grisé et les widgets sont désactivés
 * Si on revient sur une étape omise, un bandeau bleu s'affiche pour l'expliquer
@@ -258,9 +262,14 @@ The effect of this action is to enable the steps that can be enabled
   
 
  
-# Complex workflow (pipeline)
+# Composed workflow \label{composedWF}
 
 This section describes the behaviour of a complex workflow with two levels.
+
+Here, each step is itself a (simple or composed) workflow (see xxx)
+
+
+## Launch the module \label{composedWFLaunch}
 
 Globally, it respects the rules explained in the section xxx because each level follow the same logics: they only differ with the nature of each of their steps. So, for a general overview of the behaviour, please go to the section xxx.
 
@@ -268,9 +277,28 @@ The main difference resides in the memory managment of intermediate datasets. In
 
 In the complex workflow, the managment of results from each step is different. Each steps's result is stored in memory. This strategy consumes more memory but offer a more flexibility to xxx.
 
-However, there are some little differences and additional features when orking with two or more levels: the 'remote commands'.
+However, there are some little differences and additional features when working with two or more levels: the 'remote commands'.
 
-## Remote reset
+
+## Navigate through workflows \label{composedWFNavigate}
+
+The same rules of navigation as (xxx) apply here.
+
+
+## Validate a step (workflow) \label{composedWFValidate}
+
+The validation here differs from the simple workflow. There is no specific 'Save' button: the button used to validate a workflow is implemented in the last step of a simple workflow. Its validation leads to automatically xxx
+
+In the latter case, 
+
+Here, each time a steps is validated (with its own interface), 
+
+## Reset a step \label{composedWFReset}
+
+As for any workflow in `Magellan`, a 'Reset' button allows to set the current step back to its default values. The effects of this action are the same as those described in section xxx for a single process. The difference here is that a process is a workflow itself, which means that resetting a step in a complex workflow also implies resetting a basic workflow. In such a case, it is like a 'remote reset' for the lower level workflow: it is reseted not by clicking on its own 'Reset' button but via the 'Reset' button of another workflow. However, the effects are the same.
+
+The other difference resides in the strategy implemented in `Magellan`. When reseting the current step, all further steps are also (and automatically) reseted. This guarantees that the relative order to execution of processes in the workflow is correct. This feature is possible with complex workflows because the module keeps in memory the datasets generated by each step, which is not the case with simple workflows (see section xxx)
+
 
 The 'remote reset' action come with the click on the Reset button on a higher level of workflow. Contrarly to the basic level, it does not reset all the workflow but only the current step. As for the simple workflow, this resets the entire interface by setting widgets to their default values. Moreover, the dataset in this step is emptied.
 Automatically, if there is a dataset ready to sent to this step, it is done.
@@ -279,10 +307,7 @@ This action has two effects:
 
 The other effect is that it also resets all the underneath workflow: all its steps are reseted, widgets sets to their default values and it go to its start state.
 
+## Save the workflow
 
 
-* it resets
-
-
-
-
+xxxx
